<?xml version="1.0"?>
<package format="2">
  <name>grid_map_yh</name>
  <version>1.6.0</version>
  <description>test by yh in　ZJU.</description>
  <maintainer email="zjuyinhuan@gmail.com">Huan Yin</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/ZJUYH/grid_map</url>
  <url type="bugtracker">http://github.com/ethz-asl/grid_map/issues</url>
  <author email="zjuyinhuan@gmail.com">Huan Yin</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_cv</depend>
  <depend>grid_map_filters</depend>
  <depend>grid_map_loader</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_octomap</depend>
  <depend>grid_map_rviz_plugin</depend>
  <depend>grid_map_visualization</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>octomap_msgs</depend>
</package>
